Attempted to convert to LaTeX formatting

--- a/Description.tex
+++ b/Description.tex
@@ -1,11 +1,13 @@
-General idea of the project:
+\documentclass{report}
+\author{Jacob Barkey, Ryan Rayman, Andrew Scott}
+\title{Lazyy: HDMI to human interface}
+\begin{document}
+\part{General idea of the project:}
+\paragraph{}
+\textrm{The general idea of this project is to turn HDMI(sound, and visual) data into electrical impulses applied by electrodes attached to the human being. These pulses are theoretically able to be registered via the nervous system.}
+\\
+\textrm{\large HDMI -\textgreater controller -\textgreater electrodes -\textgreater human nervous system}
 
-The general idea of this project is to turn HDMI(sound, and visual) to data into electrical impulses the human being with theoretically be able to register then input nervous input and tictil input into mouse and keyboard input.
 
-Basically:
- HDMI -> nerves signals(human)
 
-And
-
-Nerves signals 
-and buttons    (human)  -> computer
+\end{document}
