Formatted general control flow diagram slightly better

--- a/Description.tex
+++ b/Description.tex
@@ -2,12 +2,14 @@
 \author{Jacob Barkey, Ryan Rayman, Andrew Scott}
 \title{Lazyy: HDMI to human interface}
 \begin{document}
-\part{General idea of the project:}
+\section{General idea of the project:}
 \paragraph{}
 \textrm{The general idea of this project is to turn HDMI(sound, and visual) data into electrical impulses applied by electrodes attached to the human being. These pulses are theoretically able to be registered via the nervous system.}
-\\
-\textrm{\large HDMI -\textgreater controller -\textgreater electrodes -\textgreater human nervous system}
 
+\paragraph{}
+\begin{center}
+\textrm{\large HDMI -\textgreater controller -\textgreater electrodes -\textgreater human nervous system}
+\end{center}
 
 
 \end{document}
